<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.MainActivity" android:id="@+id/chkBtn">

    <CheckBox android:layout_width="0dp" android:layout_height="wrap_content"
              android:text="test" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
              app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
              android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:id="@+id/checkBox"/>

    <Button
            android:text="@string/start_service"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/startServiceButton"
            style="@style/Widget.AppCompat.Button.Colored"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintVertical_bias="0.159" android:onClick="startService"
            app:layout_constraintHorizontal_bias="0.0"/>
    <Button
            android:text="@string/stop_service"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/stopServiceButton"
            style="@style/Widget.AppCompat.Button.Colored"
            app:layout_constraintTop_toBottomOf="@+id/startServiceButton" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp" android:onClick="stopService"/>
    <Button
            android:text="@string/start_intent_service"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/startIntentServiceButton" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:onClick="startIntentService"
            style="@style/Widget.AppCompat.Button.Colored" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/textViewStartdServiceResult"/>
    <TextView
            android:text="@string/started_service_result"
            android:layout_width="0dp"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:id="@+id/textViewStartdServiceResult" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/stopServiceButton"/>
    <TextView
            android:text="@string/intent_result"
            android:layout_width="0dp"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:id="@+id/textViewIntentResult" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/startIntentServiceButton"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    <Button
            android:text="@string/bound_service_activity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/buttonBindService" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:onClick="moveToSecondActivity"
            style="@style/Widget.AppCompat.Button.Colored"/>
    <Button
            android:text="@string/messenger_activity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            style="@style/Widget.AppCompat.Button.Colored" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="25dp" app:layout_constraintBottom_toTopOf="@+id/buttonBindService"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp" android:onClick="moveToMessengerActivity"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textViewIntentResult"/>

</android.support.constraint.ConstraintLayout>