<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.MessengerActivity">

    <EditText
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="2"
            android:id="@+id/edNumOne"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:hint="@string/zero_value"
            android:layout_width="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="64dp"
            app:layout_constraintTop_toTopOf="parent"
    />
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="2"
            android:id="@+id/edNumTwo"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:hint="@string/zero_value"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginTop="64dp" app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvResult"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="56dp" app:layout_constraintTop_toBottomOf="@+id/edNumOne"
            android:textAlignment="center"/>
    <Button
            android:text="@string/add"
            android:layout_width="363dp"
            android:layout_height="wrap_content"
            android:id="@+id/addButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:onClick="performAddOperation"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="58dp"
            app:layout_constraintTop_toBottomOf="@+id/tvResult"/>
    <Button
            android:text="@string/bind_service"
            android:layout_width="363dp"
            android:layout_height="wrap_content"
            android:id="@+id/bindServiceButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:onClick="bindService" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="64dp"
            app:layout_constraintTop_toBottomOf="@+id/addButton"/>
    <Button
            android:text="@string/unbind_service"
            android:layout_width="363dp"
            android:layout_height="wrap_content"
            android:id="@+id/unbindButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:onClick="unbindService" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/bindServiceButton"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.029"/>
</android.support.constraint.ConstraintLayout>